Scroll effects off

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!--script src="js/custom.js" type="text/javascript" name="custom-scripts"></script-->
 		 
 	</head>
-	<body class="slides cards animated smooth">
+	<body class="slides scroll animated smooth">
 		
 
 <!-- SVG Library -->
@@ -257,11 +257,11 @@
             <li class="col-8-12 left cell-32">
               <h1 class="ae-2">Schedule post, notify attenders</h1>
               <div class="ae-3">
-                <p class="small">It's not enough just create Facebook event.<br/>
+                <p class="small">It's not enough just to create Facebook event.<br/>
                 To get maximum effort from your Events, you need to post regularly post to all your events.
                   Facebook notifies Event Attenders about your new posts. That's where the money are!
                   But you need hundreds of hours to prepare and post content to Facebook events. As there is not build-in feature for Post Scheduling.</p>
-                <p>Schedule announcements to ALL your Facebook Events attenders within minutes.</p>
+                <p class="small">Schedule announcements to ALL your Facebook Events attenders within minutes.</p>
               </div>
               <ul class="items-32">
                 <li class="fix-8-12 toLeft text-32">
